// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderUserBlock Should render authorized 1`] = `
<div
  className="user-block"
>
  <a
    className="user-block__avatar"
    href="/mylist"
    onClick={[Function]}
  >
    <img
      alt="User avatar"
      height="63"
      src="#"
      width="63"
    />
  </a>
</div>
`;

exports[`HeaderUserBlock Should render unauthorized 1`] = `
<div
  className="user-block"
>
  <a
    className="user-block__link"
    href="/login"
    onClick={[Function]}
  >
    Sign in
  </a>
</div>
`;
